Fixed desktop alignment

--- a/src/Traace.scss
+++ b/src/Traace.scss
@@ -62,7 +62,7 @@ input{
 #root{
     background-color: var(--background);
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     height: 100vh;
     width: 100vw;
@@ -179,6 +179,11 @@ input{
 }
 
 @media screen and (max-width: 1000px){
+
+    #root{
+        align-items: flex-start;
+    }
+    
     .app-container{
         width: 90%;
         height: 97%;
